--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF5_eL89xtb4JNp8Qyz34oRkjpG6aE29c
+ " async defer></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
