--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,9 +2,13 @@
   <ion-navbar color="primary">
     <ion-title>
 Map   </ion-title>
+<ion-buttons end>
+  <button ion-button (click)="addMarker()">Ma position </button>
+</ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content >
  <div #map id="map"></div>
+
 </ion-content>
