--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,12 +3,27 @@
     <ion-title>
 Map   </ion-title>
 <ion-buttons end>
-  <button ion-button (click)="addMarker()">Ma position </button>
+  <button ion-button (click)="addMarker()"><ion-icon name="ios-locate-outline"></ion-icon></button>
+  <button ion-button icon-only (click)='toggleSearch()'>
+
+    <ion-icon name="search"></ion-icon>
+ 
+  </button>
+
 </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content >
- <div #map id="map"></div>
+    <div id="pos"> 
+        
+        <button ion-button (click)='reload()'> Relancer ma position</button>
+        <button ion-button color="danger" (click)='poshide()'>Annuler</button>
+  
+   </div>
+
+ <div #map id="map">
+  
+    </div>  
 
 </ion-content>
