--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <ion-title>
 Map   </ion-title>
 <ion-buttons end>
-  <button ion-button (click)="addMarker()"><ion-icon name="ios-locate-outline"></ion-icon></button>
+  <button ion-button (click)="addMarker()">Ma position</button>
   <button ion-button icon-only (click)='toggleSearch()'>
 
     <ion-icon name="search"></ion-icon>
